feat: enhance Library JSON parsing with custom deserializer and improve list handling in GameInstanceManifest